Preview Section is finished

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./src/pages/Home/components/PreviewSection/PreviewSection.css">
+		<link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.css">
 		<title>MILC Website</title>
 	</head>
 	<body>
 		<div id="root"></div>
+
 	</body>
 </html>
